# Auto-examiner

./: .gitignore  Blog.md  Dockerfile  README.md  api.js  app.js  chart.js  client.py  index.html  inference.py  logger.js  models.py  openenv.yaml  pyproject.toml  styles.css
docs/superpowers/plans/: 2026-04-23-auto-examiner.md
docs/superpowers/specs/: 2026-04-23-auto-examiner-design.md
server/: app.py  environment.py  rewards.py  test_generator.py
tests/: test_environment.py  test_models.py  test_rewards.py  test_test_generator.py
